<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".activity.SettingsActivity">

    <Button
        android:id="@+id/enable_query_listening_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="4dp"
        android:background="@drawable/custom_button"
        android:text="@string/enable_query_listening"/>


    <Button
        android:id="@+id/enable_client_reminders_listening_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="4dp"
        android:background="@drawable/custom_button"
        android:text="@string/enable_client_reminders_listening"/>


    <Button
        android:id="@+id/enable_report_listening_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="4dp"
        android:background="@drawable/custom_button"
        android:text="@string/enable_report_listening"/>


</LinearLayout>
