<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".activity.SendActivity">

    <Button
        android:id="@+id/send_email_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:background="@drawable/custom_button"
        android:text="@string/send_email_text"/>


    <Button
        android:id="@+id/upload_file_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:background="@drawable/custom_button"
        android:text="@string/upload_file_to_drive_text"/>

    <Button
        android:id="@+id/send_task_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:background="@drawable/custom_button"
        android:text="@string/send_task_request_text"/>

</LinearLayout>
