<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".activity.ReceiveActivity">


    <FrameLayout
        android:id="@+id/bank_query_frame"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/bank_query_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:background="@drawable/custom_button"
            android:text="@string/bank_query_text"/>

        <ImageView
            android:id="@+id/bank_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_alert_circle_grey"
            android:visibility="invisible"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/reminder_frame"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/reminder_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/reminders_text"/>

        <ImageView
            android:id="@+id/reminder_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_alert_circle_grey"
            android:visibility="invisible"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/reports_frame"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/reports_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:background="@drawable/custom_button"
            android:text="@string/reports_text"/>

        <ImageView
            android:id="@+id/reports_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_alert_circle_grey"
            android:visibility="invisible"/>

    </FrameLayout>

</LinearLayout>
